--- a/main/pom.xml
+++ b/main/pom.xml
@@ -26,8 +26,8 @@
 		<!-- dependency versions -->
 		<cryptomator.cryptolib.version>1.2.0-SNAPSHOT</cryptomator.cryptolib.version>
 		<cryptomator.cryptofs.version>1.5.0-SNAPSHOT</cryptomator.cryptofs.version>
-		<cryptomator.webdav.version>1.0.4</cryptomator.webdav.version>
-		<cryptomator.jni.version>2.0.0</cryptomator.jni.version>
+		<cryptomator.webdav.version>1.1.0-SNAPSHOT</cryptomator.webdav.version>
+		<cryptomator.jni.version>2.1.0-SNAPSHOT</cryptomator.jni.version>
 		
 		<commons-io.version>2.5</commons-io.version>
 		<commons-lang3.version>3.6</commons-lang3.version>
@@ -38,8 +38,8 @@
 		<dagger.version>2.14.1</dagger.version>
 		<gson.version>2.8.2</gson.version>
 		
-		<slf4j.version>1.7.25</slf4j.version>
-		<logback.version>1.2.3</logback.version>
+		<slf4j.version>1.8.0-beta1</slf4j.version>
+		<logback.version>1.3.0-alpha4</logback.version>
 		
 		<junit.version>4.12</junit.version>
 		<junit.hierarchicalrunner.version>4.12.1</junit.hierarchicalrunner.version>
